# macOSXPCSample

./: .gitignore  README.md
.gitignore/: .gitignore
MIG/MIG/: add.defs  add.h  addServer.c  addUser.c  main_server.c
MIG/MIG.xcodeproj/: project.pbxproj
MIG/MIG.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MachC/: CMakeLists.txt  cc.inoki.simplecxpc.plist
MachC/simpleCXPCCallee/: main.mm
MachC/simpleCXPCCaller/: main.mm
MachSwift/: cc.inoki.rdconsolesequencerxpc.plist
MachSwift/rdConsoleSequencer/: README.md
MachSwift/rdConsoleSequencerClient/: README.md
XPCCallerCAPI/XPCCalleeCAPI/: Info.plist  XPCCalleeCAPI.h  XPCCalleeCAPI.m  XPCCalleeCAPIProtocol.h  main.m
XPCCallerCAPI/XPCCallerCAPI/: AppDelegate.h  AppDelegate.m  main.m
XPCCallerCAPI/XPCCallerCAPI.xcodeproj/: project.pbxproj
XPCCallerSwift/XPCCalleeOBC/: Info.plist  XPCCalleeOBC.h  XPCCalleeOBC.m  XPCCalleeOBCProtocol.h  main.m
XPCCallerSwift/XPCCallerSwift/: callerprotocol.swift  main.swift
XPCCallerSwift/XPCCallerSwift.xcodeproj/: project.pbxproj
XPCCallerUIOBC/XPCCalleeUIOBC/: Info.plist  XPCCalleeUIOBC.h  XPCCalleeUIOBC.m  XPCCalleeUIOBCProtocol.h  main.m
XPCCallerUIOBC/XPCCallerUIOBC/: AppDelegate.h  AppDelegate.m  main.m
XPCCallerUIOBC/XPCCallerUIOBC.xcodeproj/: project.pbxproj
XPCCallerUITest/XPCCalleeUITest/: Info.plist  ServiceDelegate.swift  ServiceProviderXPC.swift  main.swift
XPCCallerUITest/XPCCallerUITest/: AppDelegate.swift  Info.plist  Protocol.swift
XPCCallerUITest/XPCCallerUITest.xcodeproj/: project.pbxproj
(+12 files in other folders)
